# django_wplogin

./: LICENSE  README.md  pyproject.toml
src/django_wplogin/: __init__.py
src/django_wplogin/templates/admin/: login.html
