[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django_wplogin"
readme = "README.md"
authors = [{name = "Baptiste Mispelon", email = "hello@bmispelon.rocks"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
