[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django_wplogin"
readme = "README.md"
authors = [
    {name = "Alex Gómez"},
    {name = "Baptiste Mispelon", email = "hello@bmispelon.rocks"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Wagtail",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: PHP Classes",
    "Topic :: Software Development :: Testing :: Mocking",
]
dynamic = ["version", "description"]
